-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.1
-
e0d159c9f (dev), 1f709e4e1 (6.7), 1eb2247a1 (6.6), a351675da (tqtc/lts-6.5)
-
Foundations Sprint 99
As soon as client receives any message, the socket closed. The close code and reason output is:
disconnected 1002 "Rsv field is non-zero"
The QWebSocketServer works in this case, but if you implement websocket server using QWebSocketServer::handleConnection() to upgrade from the tcp socket, then rhensame problem occurs.
To reproduce, please run the attached example.
- resulted in
-
QTBUG-121462 Websocket support is easy to misuse
-
- Closed
-