QHttpServerRouterRule: Ensure responder is moved out of

Ensure that the responder is moved out of when route is handled.
Websocket handling code assumes that this is the case. Failing to
do so results in two handlers connected to the socket's readyRead()
signal.

Fixes: QTBUG-120746
Pick-to: 6.7 6.6 6.5
Change-Id: Ib2414991e442bdc826ee124dcbb3910bfaa04a3f
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>